--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ z-index: -2;
 </nav>
 
 <header>
-<img src="profile.jpg" width="160" style="border-radius:50%; margin-bottom:20px;"> 
+<img src="profile.jpg" 
      class="profile-img" 
      style="width:200px; height:200px; border-radius:50%; object-fit:cover; object-position:center 25%; margin-bottom:10px; border:2px solid #64ffda; box-shadow:0 0 12px #64ffda;" >
 <h1 class="glow-name">Tarunika Vijayakumar</h1>
@@ -687,4 +687,5 @@ observer.observe(section);
 
 </body>
 </html>
+
 
