--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@ z-index: -2;
 
 <header>
 <img src="profile.jpg" 
-     class="profile-img" 
-     style="width:200px; height:200px; border-radius:50%; object-fit:cover; object-position:center 25%; margin-bottom:10px; border:2px solid #64ffda; box-shadow:0 0 12px #64ffda;" >
+     class="profile-img" >
 <h1 class="glow-name">Tarunika Vijayakumar</h1>
 <div class="typing">Former Network Engineer @ Tata Communications | M.Sc. ICE Student @ TU Darmstadt</div>
 </header>
@@ -687,5 +686,6 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
