--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ Through this project, I gained practical experience in analyzing network traffic
 </section>
 <section>
 <h2>Download Resume</h2>
-<a href="C:\Users\Tarunika_Vijayakumar\OneDrive\Desktop\Documents\Resume_signed.pdf"><button>Download CV</button></a>
+<a href="resume.pdf"><button>Download CV</button></a>
 </section>
 
 <footer>
@@ -686,6 +686,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
