--- a/index.html
+++ b/index.html
@@ -622,7 +622,8 @@ Through this project, I gained practical experience in analyzing network traffic
 </section>
 <section>
 <h2>Download Resume</h2>
-<a href="resume.pdf"><button>Download CV</button></a>
+<a href="resume.pdf" download>
+<button>Download CV</button></a>
 </section>
 
 <footer>
@@ -686,6 +687,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
