--- a/index.html
+++ b/index.html
@@ -196,13 +196,22 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('https://www.transparenttextures.com/patterns/cubes.png');
-opacity: 0.03;
+background: url('background.jpeg') no-repeat center center fixed;
+background-size: cover;
+animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
 }
-
+     
+@keyframes zoomBg {
+0% {
+background-size:100%;
+}
+100% {
+background-size:110%;
+}
+}
+     
 </style>
-
 
 </head>
 
@@ -687,6 +696,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
