--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('background.jpeg') no-repeat center center fixed;
+background: url('bg.jpeg') no-repeat center center fixed;
 background-size: cover;
 animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
@@ -696,6 +696,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
