--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('bg.png') no-repeat center center fixed;
+background: url('picture.jpg') no-repeat center center fixed;
 background-size: cover;
 animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
@@ -229,7 +229,7 @@ background-size:110%;
 </nav>
 
 <header>
-<img src="profile.jpg" 
+<img src="pic.jpg" 
      class="profile-img" >
 <h1 class="glow-name">Tarunika Vijayakumar</h1>
 <div class="typing">Former Network Engineer @ Tata Communications | M.Sc. ICE Student @ TU Darmstadt</div>
@@ -696,6 +696,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
