--- a/index.html
+++ b/index.html
@@ -141,13 +141,15 @@ to { background-size: 120% 120%; }
 /* ===== Profile Image ===== */
 .profile-img {
 width: 160px;
-height: 160px;
+height: auto;
+max-height: 200px;
 border-radius: 50%;
 margin-bottom: 20px;
 border: 3px solid #64ffda;
 box-shadow: 0 0 20px rgba(100,255,218,0.4);
 animation: float 4s ease-in-out infinite;
-object-fit: cover;
+object-fit: contain;
+background-color: #0a192f;
 }
 
 @keyframes float {
@@ -196,7 +198,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('picture.jpg') no-repeat center center fixed;
+background: url('bg.png') no-repeat center center fixed;
 background-size: cover;
 animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
@@ -696,6 +698,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
