--- a/index.html
+++ b/index.html
@@ -139,18 +139,15 @@ to { background-size: 120% 120%; }
 }
 
 /* ===== Profile Image ===== */
-.profile-img {
-width: 160px;
-height: auto;
-max-height: 200px;
-border-radius: 50%;
-margin-bottom: 20px;
-border: 3px solid #64ffda;
-box-shadow: 0 0 20px rgba(100,255,218,0.4);
-animation: float 4s ease-in-out infinite;
-object-fit: contain;
-background-color: #0a192f;
-}
+.profile-img { 
+width: 180px; 
+height: 180px; 
+border-radius: 50%; 
+margin-bottom: 20px; 
+border: 3px solid #64ffda; 
+box-shadow: 0 0 20px rgba(100,255,218,0.4); 
+animation: float 4s ease-in-out infinite; 
+object-fit: cover; }
 
 @keyframes float {
 0% { transform: translateY(0px); }
@@ -698,6 +695,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
