--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ background-size:110%;
 </nav>
 
 <header>
-<img src="pic.jpg" 
+<img src="img.jpg" 
      class="profile-img" >
 <h1 class="glow-name">Tarunika Vijayakumar</h1>
 <div class="typing">Former Network Engineer @ Tata Communications | M.Sc. ICE Student @ TU Darmstadt</div>
@@ -695,6 +695,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
