--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('bgimage.png') no-repeat center center fixed;
+background: url('background.png') no-repeat center center fixed;
 background-size: cover;
 animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
@@ -695,6 +695,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
