--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@ body{background:#0a192f;color:white;}
 
 #circuit-bg{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;}
 
-nav{position:fixed;width:100%;background:#020c1b;padding:15px;text-align:center;z-index:1000;box-shadow:0 0 5px #64ffda;}
+nav{position:fixed;width:100%;background:#020c1b;padding:15px;text-align:center;z-index:1000;box-shadow:0 0 5px #ffa600;}
 nav a{color:white;margin:0 15px;text-decoration:none;}
 
 header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
 
-.glow-name{font-size:48px;color:#ffffff;text-shadow:0 0 2px #64ffda;}
+.glow-name{font-size:48px;color:#ffffff;text-shadow:0 0 2px #ffa600;}
 
-.typing{font-size:30px;color:#64ffda;white-space:nowrap;overflow:hidden;width:0;animation:typing 4s steps(40,end) forwards;}
+.typing{font-size:30px;color:#ffa600;white-space:nowrap;overflow:hidden;width:0;animation:typing 4s steps(40,end) forwards;}
 @keyframes typing{from{width:0}to{width:100%}}
 
 section{padding:40px 80px;}
-h2{text-align:center;color:#64ffda;margin-bottom:20px;}
+h2{text-align:center;color:#ffa600;margin-bottom:20px;}
 
-.card{background:#112240cc;padding:20px;margin:20px 0;border-radius:10px;box-shadow:0 0 5px #64ffda;}
+.card{background:#112240cc;padding:20px;margin:20px 0;border-radius:10px;box-shadow:0 0 5px #ffa600;}
 
 .expandable{cursor:pointer;}
 .expandable-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;}
-.expand-icon{font-size:22px;color:#64ffda;transition:transform 0.4s ease;}
+.expand-icon{font-size:22px;color:#ffa600;transition:transform 0.4s ease;}
 .expandable.active .expand-icon{transform:rotate(45deg);}
 
 .full-text{max-height:0;opacity:0;overflow:hidden;transition:max-height 0.8s ease, opacity 0.5s ease;}
@@ -39,14 +39,14 @@ h2{text-align:center;color:#64ffda;margin-bottom:20px;}
 .edu-cards{display:flex;flex-direction:column;gap:20px;max-height:0;opacity:0;overflow:hidden;transition:max-height 0.8s ease, opacity 0.5s ease;}
 .expandable.active .edu-cards{max-height:3000px;opacity:1;}
 
-.edu-card{background:#1a2a4f;padding:15px;border-radius:8px;box-shadow:0 0 5px #64ffda;}
+.edu-card{background:#1a2a4f;padding:15px;border-radius:8px;box-shadow:0 0 5px #ffa600;}
 
 .skill-bar{margin:10px 0;}
 .bar{background:#233554;border-radius:20px;overflow:hidden;}
-.progress{height:10px;background:#64ffda;width:0;animation:load 3s forwards;}
+.progress{height:10px;background:#ffa600;width:0;animation:load 3s forwards;}
 @keyframes load{to{width:80%}}
 
-button{background:#64ffda;border:none;padding:10px 20px;border-radius:5px;cursor:pointer;}
+button{background:#ffa600;border:none;padding:10px 20px;border-radius:5px;cursor:pointer;}
 footer{text-align:center;padding:20px;background:#020c1b;}
 p{color:#cbd5e1;}
 
@@ -55,7 +55,7 @@ background:#1a2a4f;
 padding:20px;
 margin:20px 0;
 border-radius:10px;
-box-shadow:0 0 5px #64ffda;
+box-shadow:0 0 5px #ffa600;
 }
 
 .skill{
@@ -78,7 +78,7 @@ margin-top:4px;
 
 .skill-fill{
 height:100%;
-background:#64ffda;
+background:#ffa600;
 border-radius:20px;
 animation:fillBar 2s forwards;
 }
@@ -108,7 +108,7 @@ margin-top:10px;
 }
 
 .skill-arrow{
-color:#64ffda;
+color:#ffa600;
 font-size:20px;
 transition:transform 0.3s ease;
 }
@@ -144,7 +144,7 @@ width: 180px;
 height: 180px; 
 border-radius: 50%; 
 margin-bottom: 20px; 
-border: 3px solid #64ffda; 
+border: 3px solid #ffa600; 
 box-shadow: 0 0 20px rgba(100,255,218,0.4); 
 animation: float 4s ease-in-out infinite; 
 object-fit: cover; }
@@ -173,7 +173,7 @@ bottom: 0;
 left: 50%;
 width: 60%;
 height: 1px;
-background: linear-gradient(to right, transparent, #64ffda, transparent);
+background: linear-gradient(to right, transparent, #ffa600, transparent);
 transform: translateX(-50%);
 opacity: 0.3;
 }
@@ -184,7 +184,7 @@ transition: 0.3s ease;
 }
 button:hover {
 transform: scale(1.05);
-box-shadow: 0 0 15px #64ffda;
+box-shadow: 0 0 15px #ffa600;
 }
 
 /* ===== Background Image Overlay (Subtle Tech Pattern) ===== */
@@ -195,7 +195,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background: url('background.png') no-repeat center center fixed;
+background: url('bg.png') no-repeat center center fixed;
 background-size: cover;
 animation: zoomBg 20s infinite alternate ease-in-out;
 z-index: -2;
@@ -695,6 +695,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
