--- a/index.html
+++ b/index.html
@@ -346,15 +346,9 @@ Through this project, I gained practical experience in analyzing network traffic
 
 <div class="edu-cards">
 <div class="edu-card">
-<p>Developed an autonomous mobile robot using an Elegoo Arduino platform capable of following a predefined path and detecting obstacles in real time. The project aimed to simulate basic autonomous navigation logic using embedded systems and sensor-based feedback.</p>
-<ul>
-<li>Programmed the robot using C language in Arduino IDE</li>
-<li>Implemented line-following using IR sensors</li>
-<li>Integrated ultrasonic sensors for real-time obstacle detection</li>
-<li>Designed path tracking and obstacle avoidance logic</li>
-<li>Applied concepts of embedded systems, real-time decision making, and sensor integration</li>
-</ul>
-<p>This project enhanced my understanding of hardware-software interaction, automation logic, and real-time system control in autonomous systems.</p>
+<p>I developed an autonomous mobile robot using an Elegoo Arduino platform that is capable of following a predefined path while simultaneously detecting and avoiding obstacles in real time, with the objective of simulating fundamental autonomous navigation logic using embedded systems and sensor-based feedback mechanisms.<br>
+The robot was programmed in C using the Arduino IDE, where Infrared (IR) sensors were implemented to enable accurate line-following by continuously detecting path deviations and adjusting motor control signals accordingly. In addition to path tracking, ultrasonic sensors were integrated to measure the distance of nearby objects and facilitate real-time obstacle detection within the robot’s operating environment. Based on sensor input data, customized path tracking and obstacle avoidance algorithms were designed to support dynamic navigation and ensure safe movement in the presence of unforeseen barriers.<br>
+The system was further optimized to process real-time inputs and execute responsive motor actions, thereby improving navigation accuracy and operational stability. This project involved the practical application of embedded systems concepts, real-time decision-making, sensor integration, and control logic design, significantly enhancing my understanding of hardware–software interaction, automation strategies, and real-time system control in autonomous robotic platforms.</p>
 </div>
 </div>
 </div>
@@ -368,12 +362,8 @@ Through this project, I gained practical experience in analyzing network traffic
 
 <div class="edu-cards">
 <div class="edu-card">
-<ul>
-<li>Implemented supervised learning algorithms for predictive analysis</li>
-<li>Conducted data cleaning and preprocessing on healthcare datasets</li>
-<li>Built a classification model to predict potential diabetic cases</li>
-<li>Evaluated model performance using standard validation techniques</li>
-</ul>
+<p>I implemented supervised machine learning algorithms to perform predictive analysis on healthcare datasets, with the objective of identifying individuals at risk of developing diabetes based on relevant medical attributes. The project involved comprehensive data cleaning and preprocessing techniques, including handling missing values, normalizing input features, and transforming categorical variables to improve data quality and model reliability. A classification model was then developed to predict potential diabetic cases by analyzing patterns and correlations within the dataset.<br>
+To ensure the effectiveness and robustness of the predictive model, its performance was evaluated using standard validation techniques such as accuracy, precision, recall, and confusion matrix analysis. This project strengthened my understanding of data preprocessing, feature engineering, predictive modeling, and performance evaluation in supervised learning, while also highlighting the practical application of machine learning techniques in healthcare-based risk assessment systems.</p>
 </div>
 </div>
 </div>
@@ -387,12 +377,8 @@ Through this project, I gained practical experience in analyzing network traffic
 
 <div class="edu-cards">
 <div class="edu-card">
-<ul>
-<li>Integrated APIs for real-time news updates</li>
-<li>Implemented backend logic for processing</li>
-<li>Explored cloud-based application development</li>
-<li>Enhanced understanding of API integration and real-time data handling</li>
-</ul>
+<p>I integrated external APIs to enable real-time news updates within the application, ensuring that dynamically changing information could be fetched, processed, and displayed with minimal latency. The backend logic was implemented to handle API requests, manage data flow, and process incoming information efficiently for seamless integration with the front-end interface. In addition, I explored cloud-based application development practices to support scalable deployment and reliable access to real-time data services.<br>
+     This project significantly enhanced my understanding of API integration, backend processing, and real-time data handling, while also providing practical exposure to building and managing cloud-enabled applications that rely on continuous data exchange.</p>
 </div>
 </div>
 </div>
@@ -690,6 +676,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
