--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tarunika Vijayakumar Portfolio</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+     
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;scroll-behavior:smooth;}
 body{background:#0a192f;color:white;}
@@ -17,13 +18,26 @@ nav a{color:white;margin:0 15px;text-decoration:none;}
 
 header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
 
-.glow-name{font-size:48px;color:#ffffff;text-shadow:0 0 2px #ffa600;}
+.glow-name{
+font-family:'Great Vibes', cursive;
+font-size:64px;
+color:#ffffff;
+text-shadow:0 0 2px #ffa600;
+letter-spacing:2px;
+}
 
 .typing{font-size:30px;color:#ffa600;white-space:nowrap;overflow:hidden;width:0;animation:typing 4s steps(40,end) forwards;}
 @keyframes typing{from{width:0}to{width:100%}}
 
 section{padding:40px 80px;}
-h2{text-align:center;color:#ffa600;margin-bottom:20px;}
+h2{
+font-family:'Great Vibes', cursive;
+text-align:center;
+color:#ffa600;
+margin-bottom:20px;
+font-size:42px;
+letter-spacing:1px;
+}
 
 .card{background:#112240cc;padding:20px;margin:20px 0;border-radius:10px;box-shadow:0 0 5px #ffa600;}
 
@@ -676,6 +690,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
