--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tarunika Vijayakumar Portfolio</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-<link href="https://db.onlinewebfonts.com/c/97769352ae26f38a0358ec5d3517ba77?family=Castellar+MT+Std" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600;700&display=swap" rel="stylesheet">
      
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;scroll-behavior:smooth;}
@@ -19,7 +19,7 @@ nav a{color:white;margin:0 15px;text-decoration:none;}
 header{height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
 
 .glow-name{
-font-family:'Castellar MT Std', serif;
+font-family:'EB Garamond', serif;
 font-size:52px;
 color:#ffffff;
 text-shadow:0 0 2px #ffa600;
@@ -31,7 +31,7 @@ letter-spacing:2px;
 
 section{padding:40px 80px;}
 h2{
-font-family:'Castellar MT Std', serif;
+font-family:'EB Garamond', serif;
 text-align:center;
 color:#ffa600;
 margin-bottom:20px;
@@ -690,6 +690,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
