--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ background-size:110%;
 </nav>
 
 <header>
-<img src="profile.jpg" 
+<img src="picture.jpg" 
      class="profile-img" >
 <h1 class="glow-name">Tarunika Vijayakumar</h1>
 <div class="typing">Former Network Engineer @ Tata Communications | M.Sc. ICE Student @ TU Darmstadt</div>
@@ -690,6 +690,7 @@ observer.observe(section);
 
 </body>
 </html>
+
 
 
 
