--- a/index.html
+++ b/index.html
@@ -238,12 +238,23 @@ align-items:center;
 
 .video-content{
 background:#020c1b;
-padding:15px;
+padding:10px;
 border-radius:10px;
 width:40%;
 max-width:450px;
+height:250px;   
+display:flex;
+justify-content:center;
+align-items:center;
 box-shadow:0 0 15px #ffa600;
 position:relative;
+}
+
+video{
+width:100%;
+height:100%;
+object-fit:contain;
+border-radius:8px;
 }
 
 .close-btn{
@@ -747,6 +758,7 @@ video.currentTime=0;
      
 </body>
 </html>
+
 
 
 
