--- a/index.html
+++ b/index.html
@@ -223,6 +223,49 @@ background-size:100%;
 background-size:110%;
 }
 }
+
+
+.hld-container{
+display:flex;
+flex-direction:column;
+gap:20px;
+margin-top:20px;
+}
+
+.hld-box{
+background:#1e1e1e;
+border:1px solid #BB86FC;
+padding:15px;
+border-radius:8px;
+opacity:0;
+transform:translateY(30px);
+animation:fadeUp 1s forwards;
+}
+
+.hld-box:nth-child(2){animation-delay:0.3s;}
+.hld-box:nth-child(3){animation-delay:0.6s;}
+.hld-box:nth-child(4){animation-delay:0.9s;}
+.hld-box:nth-child(5){animation-delay:1.2s;}
+
+@keyframes fadeUp{
+to{
+opacity:1;
+transform:translateY(0);
+}
+}
+
+.hld-arrow{
+text-align:center;
+font-size:25px;
+color:#BB86FC;
+animation:blink 1s infinite alternate;
+}
+
+@keyframes blink{
+from{opacity:0.3;}
+to{opacity:1;}
+}
+
      
 </style>
 
@@ -330,6 +373,63 @@ Developed a performance monitoring tool during the testing phase to evaluate key
 The probes were configured to perform periodic throughput and latency tests over satellite links, enabling the measurement of network stability and service quality under varying conditions. I assisted in setting up the testing environment, configuring probe devices, executing performance tests, and analyzing collected data to assess link behavior and identify performance variations across different deployment regions.<br>
 The collected KPI data was visualized using Grafana dashboards to enable real-time monitoring and comparative performance analysis across locations. This project provided practical exposure to distributed network monitoring, satellite communication performance evaluation, and real-time KPI visualization in emerging LEO-based communication systems during the pilot deployment stage.
 </p>
+
+
+
+<div class="hld-container">
+
+<div class="hld-box">
+<b>Probe Agent Module</b>
+<ul>
+<li>Deployed across multiple cities using Raspberry Pi</li>
+<li>Conducts periodic network KPI tests</li>
+</ul>
+</div>
+
+<div class="hld-arrow">⬇</div>
+
+<div class="hld-box">
+<b>Network</b>
+<ul>
+<li>Latency</li>
+<li>Jitter</li>
+<li>Packet Loss</li>
+<li>Throughput</li>
+</ul>
+</div>
+
+<div class="hld-arrow">⬇</div>
+
+<div class="hld-box">
+<b>IPI Ingestion Module</b>
+<ul>
+<li>Transmits collected data to cloud</li>
+</ul>
+</div>
+
+<div class="hld-arrow">⬇</div>
+
+<div class="hld-box">
+<b>Processing Logic</b>
+<ul>
+<li>Parses & stores metrics securely</li>
+<li>Validates certificates</li>
+<li>Enriches test results</li>
+</ul>
+</div>
+
+<div class="hld-arrow">⬇</div>
+
+<div class="hld-box">
+<b>Visualization (Grafana)</b>
+<ul>
+<li>Real-time dashboards for KPI monitoring</li>
+</ul>
+</div>
+
+</div>
+
+
 </div>
 </div>
 </div>
@@ -689,6 +789,7 @@ observer.observe(section);
     
 </body>
 </html>
+
 
 
 
