--- a/index.html
+++ b/index.html
@@ -449,13 +449,14 @@ The system was further optimized to process real-time inputs and execute respons
 <div class="expandable-header">
 <h4 onclick="openHLD('diabetes')" class="arch-click">
 Diabetes Prediction using Machine Learning
-<span class="click-indicator">Click to View HLD ▶</span>
+
 </h4>
 <span class="expand-icon">+</span>
 </div>
 
 <div class="edu-cards">
 <div class="edu-card">
+<h4></h4><span class="click-indicator">Click to View HLD ▶</span></h4>
 <p>I implemented supervised machine learning algorithms to perform predictive analysis on healthcare datasets, with the objective of identifying individuals at risk of developing diabetes based on relevant medical attributes. The project involved comprehensive data cleaning and preprocessing techniques, including handling missing values, normalizing input features, and transforming categorical variables to improve data quality and model reliability. A classification model was then developed to predict potential diabetic cases by analyzing patterns and correlations within the dataset.<br>
 To ensure the effectiveness and robustness of the predictive model, its performance was evaluated using standard validation techniques such as accuracy, precision, recall, and confusion matrix analysis. This project strengthened my understanding of data preprocessing, feature engineering, predictive modeling, and performance evaluation in supervised learning, while also highlighting the practical application of machine learning techniques in healthcare-based risk assessment systems.</p>
 </div>
@@ -814,6 +815,7 @@ modal.style.display="none";
     
 </body>
 </html>
+
 
 
 
