--- a/index.html
+++ b/index.html
@@ -390,9 +390,12 @@ Strong foundation in communication networks, signal processing and embedded syst
 <!-- LEO KPI TOOL -->
 <div class="card expandable" onclick="toggleProject(this)">
 <div class="expandable-header">
-<h4 onclick="event.stopPropagation(); openHLD('leo')" class="arch-click">
+<h4>
 Low Earth Orbiting Satellite Network KPI Tool
-<span class="click-indicator">Click to View HLD ▶</span>
+<span class="click-indicator"
+onclick="event.stopPropagation(); openHLD('leo')">
+Click to View HLD ▶
+</span>
 </h4>
 <span class="expand-icon">+</span>
 </div>
@@ -411,9 +414,12 @@ The collected KPI data was visualized using Grafana dashboards to enable real-ti
 <!-- BOTNET -->
 <div class="card expandable" onclick="toggleProject(this)">
 <div class="expandable-header">
-<h4 onclick="event.stopPropagation(); openHLD('botnet')" class="arch-click">
+<h4>
 Botnet Prediction using Machine Learning
-<span class="click-indicator">Click to View HLD ▶</span>
+<span class="click-indicator"
+onclick="event.stopPropagation(); openHLD('botnet')">
+Click to View HLD ▶
+</span>
 </h4>
 <span class="expand-icon">+</span>
 </div>
@@ -431,9 +437,12 @@ Through this project, I gained practical experience in analyzing network traffic
 <!-- ARDUINO ROBOT -->
 <div class="card expandable" onclick="toggleProject(this)">
 <div class="expandable-header">
-<h4 onclick="event.stopPropagation(); openHLD('robot')" class="arch-click">
+<h4>
 Line Following & Obstacle Detection Robot using Arduino
-<span class="click-indicator">Click to View HLD ▶</span>
+<span class="click-indicator"
+onclick="event.stopPropagation(); openHLD('robot')">
+Click to View HLD ▶
+</span>
 </h4>
 <span class="expand-icon">+</span>
 </div>
@@ -450,9 +459,12 @@ The system was further optimized to process real-time inputs and execute respons
 <!-- DIABETES -->
 <div class="card expandable" onclick="toggleProject(this)">
 <div class="expandable-header">
-<h4 onclick="event.stopPropagation(); openHLD('diabetes')" class="arch-click">
+<h4>
 Diabetes Prediction using Machine Learning
-<span class="click-indicator">Click to View HLD ▶</span>
+<span class="click-indicator"
+onclick="event.stopPropagation(); openHLD('diabetes')">
+Click to View HLD ▶
+</span>
 </h4>
 <span class="expand-icon">+</span>
 </div>
@@ -817,6 +829,7 @@ modal.style.display="none";
     
 </body>
 </html>
+
 
 
 
