--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ transition:0.3s ease;
 
 .cert-btn:hover{
 transform:scale(1.05);
-box-shadow:0 0 10px #BB86FC;
+box-shadow:0 0 10px #ffa600;
 }
 
 
@@ -884,6 +884,7 @@ document.getElementById("pdfViewer").src="";
     
 </body>
 </html>
+
 
 
 
