--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ margin-top:4px;
 .cert-btn{
 margin-top:10px;
 padding:6px 14px;
-background:#BB86FC;
+background:#ffa600;
 color:#121212;
 border:none;
 border-radius:6px;
@@ -884,6 +884,7 @@ document.getElementById("pdfViewer").src="";
     
 </body>
 </html>
+
 
 
 
