--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Tarunika Vijayakumar Portfolio</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600;700&display=swap" rel="stylesheet">
-     
+
+
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">    
 <style>
   :root {
     --bg: #040d1a;
@@ -930,6 +932,7 @@ document.getElementById("pdfViewer").src="";
     
 </body>
 </html>
+
 
 
 
