--- a/index.html
+++ b/index.html
@@ -407,13 +407,7 @@
     <p class="hero-typing" style="margin-top:18px;font-size:0.9rem;color:var(--accent);letter-spacing:1px;">Former Network Engineer @ Tata Communications | M.Sc. ICE @ TU Darmstadt</p>
     <p class="hero-contact" style="margin-top:14px;">
       📍 Darmstadt, Germany &nbsp;|&nbsp;
-      <a href="mailto:tarunikaofficial19@gmail.com">tarunikaofficial19@gmail.com</a> &nbsp;|&nbsp;
     </p>
-    <div class="hero-btns">
-      <a href="#experience" class="btn btn-primary">View Experience</a>
-      <a href="resume.pdf" download class="btn btn-outline">Download CV</a>
-      <a href="#contact" class="btn btn-outline">Get In Touch</a>
-    </div>
   </div>
 </div>
 
@@ -716,7 +710,7 @@
 
   <div style="margin-top:56px;" class="reveal">
     <div class="section-header">
-      <span class="section-tag">// Contact</span>
+      <span class="section-tag">Contact</span>
       <div class="section-line"></div>
     </div>
     <div style="display:flex;gap:14px;flex-wrap:wrap;">
@@ -874,5 +868,6 @@ document.addEventListener('keydown', e => {
 </script>
 </body>
 </html>
+
 
 
